--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -6,10 +6,16 @@
     state: restarted
     daemon_reload: true
 
-
 - name: "Start and enable CoreDNS"
   ansible.builtin.systemd_service:
     name: coredns
     state: started
     enabled: true
     daemon_reload: true
+
+- name: "Disable DNS resolver and start CoreDNS"
+  ansible.builtin.systemd_service:
+  name: systemd-resolved
+  state: stopped
+  enabled: false
+  notify: "Start and enable CoreDNS"
